# bazel-fastlane-test

./: .bazelrc  .gitignore  MODULE.bazel  README.md
fastlane/: BUILD.bazel  fastlane.sh
