"""who cares"""

module(name = "bazel-fastlane-test", version = "")

#
# Ruby
#

bazel_dep(name = "rules_ruby", version = "0.12.1")

ruby = use_extension("@rules_ruby//ruby:extensions.bzl", "ruby")

ruby.toolchain(
    name = "ruby",
    version_file = "//:.ruby-version",
    ruby_build_version = "20240727",
)

use_repo(ruby, "ruby")

ruby.bundle_fetch(
    name = "bundle",
    gemfile = "//:Gemfile",
    gemfile_lock = "//:Gemfile.lock",
    gem_checksums = {
        "CFPropertyList-3.0.7": "c45721614aca8d5eb6fa216f2ec28ec38de1a94505e9766a20e98745492c3c4c",
        "addressable-2.8.7": "462986537cf3735ab5f3c0f557f14155d778f4b43ea4f485a9deb9c8f7c58232",
        "artifactory-3.0.17": "3023d5c964c31674090d655a516f38ca75665c15084140c08b7f2841131af263",
        "atomos-0.1.3": "7d43b22f2454a36bace5532d30785b06de3711399cb1c6bf932573eda536789f",
        "aws-eventstream-1.3.0": "f1434cc03ab2248756eb02cfa45e900e59a061d7fbdc4a9fd82a5dd23d796d3f",
        "aws-partitions-1.965.0": "5b9486c44677277c32e7e5cd0fac03113660791ccf0c0cfc9c54efa3f42f0e09",
        "aws-sdk-core-3.201.5": "1848c52fa93118cf527f2b2a70196b1fe4586f4d37dca8ffb86365b5df19ac50",
        "aws-sdk-kms-1.88.0": "13588d90df1eece81f6d79bd304b3857dc3168e7ea75c933b3b835cfe8a0e309",
        "aws-sdk-s3-1.158.0": "35d68b49d64523a9bc53245885f15be40b7953cf481132abfef137d02ca6b2a6",
        "aws-sigv4-1.9.1": "7753e320c39f80f82f9e0883b30de0e7b99e756adbaedc80c50b6ad59d49c379",
        "babosa-1.0.4": "18dea450f595462ed7cb80595abd76b2e535db8c91b350f6c4b3d73986c5bc99",
        "base64-0.2.0": "0f25e9b21a02a0cc0cea8ef92b2041035d39350946e8789c562b2d1a3da01507",
        "claide-1.1.0": "6d3c5c089dde904d96aa30e73306d0d4bd444b1accb9b3125ce14a3c0183f82e",
        "colored-1.2": "9d82b47ac589ce7f6cab64b1f194a2009e9fd00c326a5357321f44afab2c1d2c",
        "colored2-3.1.2": "b13c2bd7eeae2cf7356a62501d398e72fde78780bd26aec6a979578293c28b4a",
        "commander-4.6.0": "7d1ddc3fccae60cc906b4131b916107e2ef0108858f485fdda30610c0f2913d9",
        "declarative-0.0.20": "8021dd6cb17ab2b61233c56903d3f5a259c5cf43c80ff332d447d395b17d9ff9",
        "digest-crc-0.6.5": "5ca456f3352dc5ff17eb95deb3dd5a79dc79f8bf751d8005abca5b7b9b252124",
        "domain_name-0.6.20240107": "5f693b2215708476517479bf2b3802e49068ad82167bcd2286f899536a17d933",
        "dotenv-2.8.1": "c5944793349ae03c432e1780a2ca929d60b88c7d14d52d630db0508c3a8a17d8",
        "emoji_regex-3.2.3": "ecd8be856b7691406c6bf3bb3a5e55d6ed683ffab98b4aa531bb90e1ddcc564b",
        "excon-0.111.0": "90e017194a5e87946b706273677ffe8b418241f41111ad8b499b8d3644308a2a",
        "faraday-1.10.3": "20f52e9f73231e5f3d43fb645901573ce2b75f0bd01ea52a2772133d0106e6b0",
        "faraday-cookie_jar-0.0.7": "f3cbbe6f2de3d4028f00a67ae4196b99348a6dc3c065fdae6d3c7123fa8b1402",
        "faraday-em_http-1.0.0": "7a3d4c7079789121054f57e08cd4ef7e40ad1549b63101f38c7093a9d6c59689",
        "faraday-em_synchrony-1.0.0": "460dad1c30cc692d6e77d4c391ccadb4eca4854b315632cd7e560f74275cf9ed",
        "faraday-excon-1.1.0": "b055c842376734d7f74350fe8611542ae2000c5387348d9ba9708109d6e40940",
        "faraday-httpclient-1.0.1": "4c8ff1f0973ff835be8d043ef16aaf54f47f25b7578f6d916deee8399a04d33b",
        "faraday-multipart-1.0.4": "9012021ab57790f7d712f590b48d5f948b19b43cfa11ca83e6459f06090b0725",
        "faraday-net_http-1.0.2": "63992efea42c925a20818cf3c0830947948541fdcf345842755510d266e4c682",
        "faraday-net_http_persistent-1.2.0": "0b0cbc8f03dab943c3e1cc58d8b7beb142d9df068b39c718cd83e39260348335",
        "faraday-patron-1.0.0": "dc2cd7b340bb3cc8e36bcb9e6e7eff43d134b6d526d5f3429c7a7680ddd38fa7",
        "faraday-rack-1.0.0": "ef60ec969a2bb95b8dbf24400155aee64a00fc8ba6c6a4d3968562bcc92328c0",
        "faraday-retry-1.0.3": "add154f4f399243cbe070806ed41b96906942e7f5259bb1fe6daf2ec8f497194",
        "faraday_middleware-1.2.0": "ded15d574d50e92bd04448d5566913af5cb1a01b2fa311ceecc2464fa0ab88af",
        "fastimage-2.3.1": "23c629f1f3e7d61bcfcc06c25b3d2418bc6bf41d2e615dbf5132c0e3b63ecce9",
        "fastlane-2.222.0": "6420c03d39f86d3edbe00c885f55036b49f5e2becb321720386c5d001eb472f2",
        "gh_inspector-1.1.3": "04cca7171b87164e053aa43147971d3b7f500fcb58177698886b48a9fc4a1939",
        "google-apis-androidpublisher_v3-0.54.0": "8970a72839c8dfa87d290bdf935c641bf18cbd4323bf71d182adc04c0108d210",
        "google-apis-core-0.11.3": "43217013b129d7d52c31ebf94146646c55f463ed25e68ad7523fb644d5a9cc97",
        "google-apis-iamcredentials_v1-0.17.0": "9a6525cfd6ef1c9a355f593bfef11bd0fb30e1d785ef9e5c9da51c3817a0517b",
        "google-apis-playcustomapp_v1-0.13.0": "959e51f90454b51adc72e5c322b4b4a573f869520c4d7c7c20efd1d262e48fd6",
        "google-apis-storage_v1-0.31.0": "03e8cc775e12403e5878899dd4bfb90957e7281e894937f03641c3857262db8f",
        "google-cloud-core-1.7.1": "5af2818a9c140b276ae14451092f6b80135c3fc740e1f92b16165723f6f7012e",
        "google-cloud-env-1.6.0": "6179acb946975892c7908748df5722a4ebadfc8cf5bb7b0d8d933ca67183fa15",
        "google-cloud-errors-1.4.0": "0b4e2e0f563db1708732ab4037421d9f26de5cbbbc04be710f2c9cf358e2de14",
        "google-cloud-storage-1.47.0": "b543d01a9c83495149accd2da77b2cf365d5b6aac21bf3fa21e69dfc8f1eeb76",
        "googleauth-1.8.1": "814adadaaa1221dce72a67131e3ecbd6d23491a161ec84fb15fd353b87d8c9e7",
        "highline-2.0.3": "2ddd5c127d4692721486f91737307236fe005352d12a4202e26c48614f719479",
        "http-cookie-1.0.7": "cb7a399f3344f720b8a0f3b0765f29b62608ebb9c3ce4abf4d6eeff2caf42253",
        "httpclient-2.8.3": "2951e4991214464c3e92107e46438527d23048e634f3aee91c719e0bdfaebda6",
        "jmespath-1.6.2": "238d774a58723d6c090494c8879b5e9918c19485f7e840f2c1c7532cf84ebcb1",
        "json-2.7.2": "1898b5cbc81cd36c0fd4d0b7ad2682c39fb07c5ff682fc6265f678f550d4982c",
        "jwt-2.8.2": "5a9877315e224d551785560870287267088eedfec02d5239664def148d18bc12",
        "mini_magick-4.13.2": "71d6258e0e8a3d04a9a0a09784d5d857b403a198a51dd4f882510435eb95ddd9",
        "mini_mime-1.1.5": "8681b7e2e4215f2a159f9400b5816d85e9d8c6c6b491e96a12797e798f8bccef",
        "multi_json-1.15.0": "1fd04138b6e4a90017e8d1b804c039031399866ff3fbabb7822aea367c78615d",
        "multipart-post-2.4.1": "9872d03a8e552020ca096adadbf5e3cb1cd1cdd6acd3c161136b8a5737cdb4a8",
        "nanaimo-0.3.0": "aaaedc60497070b864a7e220f7c4b4cad3a0daddda2c30055ba8dae306342376",
        "naturally-2.2.1": "a9b88c7d2fb06da3d9c51f4b885f35bac93d760178377809a31fcf67fab4a113",
        "nkf-0.2.0": "fbc151bda025451f627fafdfcb3f4f13d0b22ae11f58c6d3a2939c76c5f5f126",
        "optparse-0.5.0": "b359d993f138cf27276c6ce9d2caa21d570eb718cd15c09e88a63de86491de08",
        "os-1.1.4": "57816d6a334e7bd6aed048f4b0308226c5fb027433b67d90a9ab435f35108d3f",
        "plist-3.7.1": "3f9542db1115d10fb77d87604dcb426755174920cc89453755efacb34a1cc42c",
        "public_suffix-6.0.1": "61d44e1cab5cbbbe5b31068481cf16976dd0dc1b6b07bd95617ef8c5e3e00c6f",
        "rake-13.2.1": "46cb38dae65d7d74b6020a4ac9d48afed8eb8149c040eccf0523bec91907059d",
        "representable-3.2.0": "cc29bf7eebc31653586849371a43ffe36c60b54b0a6365b5f7d95ec34d1ebace",
        "retriable-3.1.2": "0a5a5d0ca4ba61a76fb31a17ab8f7f80281beb040c329d34dfc137a1398688e0",
        "rexml-3.3.5": "f02f8060c2e12f417ff60e8f3f85caf273090f3db2ea09f757add91e69f98c3d",
        "rouge-2.0.7": "2da14eb856839a81ad708883c2495507f50f973f3f46904cc7d87784039ed169",
        "ruby2_keywords-0.0.5": "ffd13740c573b7301cf7a2e61fc857b2a8e3d3aff32545d6f8300d8bae10e3ef",
        "rubyzip-2.3.2": "3f57e3935dc2255c414484fbf8d673b4909d8a6a57007ed754dde39342d2373f",
        "security-0.1.5": "3a977a0eca7706e804c96db0dd9619e0a94969fe3aac9680fcfc2bf9b8a833b7",
        "signet-0.19.0": "537f3939f57f141f691e6069a97ec40f34fadafc4c7e5ba94edb06cf4350dd31",
        "simctl-1.6.10": "b99077f4d13ad81eace9f86bf5ba4df1b0b893a4d1b368bd3ed59b5b27f9236b",
        "strscan-3.1.0": "01b8a81d214fbf7b5308c6fb51b5972bbfc4a6aa1f166fd3618ba97e0fcd5555",
        "terminal-notifier-2.0.0": "7a0d2b2212ab9835c07f4b2e22a94cff64149dba1eed203c04835f7991078cea",
        "terminal-table-3.0.2": "f951b6af5f3e00203fb290a669e0a85c5dd5b051b3b023392ccfd67ba5abae91",
        "trailblazer-option-0.1.2": "20e4f12ea4e1f718c8007e7944ca21a329eee4eed9e0fa5dde6e8ad8ac4344a3",
        "tty-cursor-0.7.1": "79534185e6a777888d88628b14b6a1fdf5154a603f285f80b1753e1908e0bf48",
        "tty-screen-0.8.2": "c090652115beae764336c28802d633f204fb84da93c6a968aa5d8e319e819b50",
        "tty-spinner-0.9.3": "0e036f047b4ffb61f2aa45f5a770ec00b4d04130531558a94bfc5b192b570542",
        "uber-0.1.0": "5beeb407ff807b5db994f82fa9ee07cfceaa561dad8af20be880bc67eba935dc",
        "unicode-display_width-2.5.0": "7e7681dcade1add70cb9fda20dd77f300b8587c81ebbd165d14fd93144ff0ab4",
        "word_wrap-1.0.0": "f556d4224c812e371000f12a6ee8102e0daa724a314c3f246afaad76d82accc7",
        "xcodeproj-1.25.0": "aa0bc57eb3bd616357088a9b41794ef79bdcf7ba969000642aec1e768e7b06ce",
        "xcpretty-0.3.0": "75c7cc577be3527e7663ca627cbeb47613904c3a44f34cca3a92d202053e04f7",
        "xcpretty-travis-formatter-1.0.1": "aacc332f17cb7b2cba222994e2adc74223db88724fe76341483ad3098e232f93",
    },
)

use_repo(ruby, "bundle", "ruby_toolchains")

register_toolchains("@ruby_toolchains//:all")
